bug on overflow still shown fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ footer p {
 
 .more-info {
     background: #dddddd;
+    display: none;
     height: 100vh;
     overflow: auto;
     padding: 20px;
